// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Notice Alert 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "sc-fdqjUm qwomD",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "sc-cLmFfZ gSPhhp",
          "type": "2",
        },
        "children": Array [
          Object {
            "attribs": Object {
              "class": "sc-eAyhxF bteHJh",
            },
            "children": Array [],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": Object {
              "attribs": Object {
                "class": "sc-kbdWBx dtvnZA",
              },
              "children": Array [
                Object {
                  "data": "This is an alert notice",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "div",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": [Circular],
              "type": "tag",
              "x-attribsNamespace": Object {
                "class": undefined,
              },
              "x-attribsPrefix": Object {
                "class": undefined,
              },
            },
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
            },
          },
          Object {
            "attribs": Object {
              "class": "sc-kbdWBx dtvnZA",
            },
            "children": Array [
              Object {
                "data": "This is an alert notice",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": Object {
              "attribs": Object {
                "class": "sc-eAyhxF bteHJh",
              },
              "children": Array [],
              "name": "div",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": [Circular],
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {
                "class": undefined,
              },
              "x-attribsPrefix": Object {
                "class": undefined,
              },
            },
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
            },
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "type": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "type": undefined,
        },
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`Storyshots Notice Error 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "sc-fdqjUm qwomD",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "sc-cLmFfZ ipXBet",
          "type": "1",
        },
        "children": Array [
          Object {
            "attribs": Object {
              "class": "sc-eAyhxF bteHJh",
            },
            "children": Array [
              Object {
                "attribs": Object {
                  "height": "28px",
                  "version": "1.1",
                  "viewBox": "0 0 28 28",
                  "width": "28px",
                  "xlink": "http://www.w3.org/1999/xlink",
                  "xmlns": "http://www.w3.org/2000/svg",
                },
                "children": Array [
                  Object {
                    "attribs": Object {},
                    "children": Array [
                      Object {
                        "data": "ico-info-notification",
                        "next": null,
                        "parent": [Circular],
                        "prev": null,
                        "type": "text",
                      },
                    ],
                    "name": "title",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": Object {
                      "attribs": Object {},
                      "children": Array [
                        Object {
                          "data": "Created with Sketch.",
                          "next": null,
                          "parent": [Circular],
                          "prev": null,
                          "type": "text",
                        },
                      ],
                      "name": "desc",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": Object {
                        "attribs": Object {
                          "fill": "none",
                          "fill-rule": "evenodd",
                          "id": "Symbols",
                          "stroke": "none",
                          "stroke-width": "1",
                        },
                        "children": Array [
                          Object {
                            "attribs": Object {
                              "id": "Buy-Eth-call-out",
                              "transform": "translate(-40.000000, -20.000000)",
                            },
                            "children": Array [
                              Object {
                                "attribs": Object {},
                                "children": Array [
                                  Object {
                                    "attribs": Object {
                                      "id": "baseline-error-24px",
                                      "transform": "translate(38.000000, 18.000000)",
                                    },
                                    "children": Array [
                                      Object {
                                        "attribs": Object {
                                          "id": "Path",
                                          "points": "0 0 32 0 32 32 0 32",
                                        },
                                        "children": Array [],
                                        "name": "polygon",
                                        "namespace": "http://www.w3.org/2000/svg",
                                        "next": Object {
                                          "attribs": Object {
                                            "d": "M16,2.66666667 C8.64,2.66666667 2.66666667,8.64 2.66666667,16 C2.66666667,23.36 8.64,29.3333333 16,29.3333333 C23.36,29.3333333 29.3333333,23.36 29.3333333,16 C29.3333333,8.64 23.36,2.66666667 16,2.66666667 Z M17.3333333,22.6666667 L14.6666667,22.6666667 L14.6666667,20 L17.3333333,20 L17.3333333,22.6666667 Z M17.3333333,17.3333333 L14.6666667,17.3333333 L14.6666667,9.33333333 L17.3333333,9.33333333 L17.3333333,17.3333333 Z",
                                            "fill": "#F2524A",
                                            "fill-rule": "nonzero",
                                            "id": "Shape",
                                          },
                                          "children": Array [],
                                          "name": "path",
                                          "namespace": "http://www.w3.org/2000/svg",
                                          "next": null,
                                          "parent": [Circular],
                                          "prev": [Circular],
                                          "type": "tag",
                                          "x-attribsNamespace": Object {
                                            "d": undefined,
                                            "fill": undefined,
                                            "fill-rule": undefined,
                                            "id": undefined,
                                          },
                                          "x-attribsPrefix": Object {
                                            "d": undefined,
                                            "fill": undefined,
                                            "fill-rule": undefined,
                                            "id": undefined,
                                          },
                                        },
                                        "parent": [Circular],
                                        "prev": null,
                                        "type": "tag",
                                        "x-attribsNamespace": Object {
                                          "id": undefined,
                                          "points": undefined,
                                        },
                                        "x-attribsPrefix": Object {
                                          "id": undefined,
                                          "points": undefined,
                                        },
                                      },
                                      Object {
                                        "attribs": Object {
                                          "d": "M16,2.66666667 C8.64,2.66666667 2.66666667,8.64 2.66666667,16 C2.66666667,23.36 8.64,29.3333333 16,29.3333333 C23.36,29.3333333 29.3333333,23.36 29.3333333,16 C29.3333333,8.64 23.36,2.66666667 16,2.66666667 Z M17.3333333,22.6666667 L14.6666667,22.6666667 L14.6666667,20 L17.3333333,20 L17.3333333,22.6666667 Z M17.3333333,17.3333333 L14.6666667,17.3333333 L14.6666667,9.33333333 L17.3333333,9.33333333 L17.3333333,17.3333333 Z",
                                          "fill": "#F2524A",
                                          "fill-rule": "nonzero",
                                          "id": "Shape",
                                        },
                                        "children": Array [],
                                        "name": "path",
                                        "namespace": "http://www.w3.org/2000/svg",
                                        "next": null,
                                        "parent": [Circular],
                                        "prev": Object {
                                          "attribs": Object {
                                            "id": "Path",
                                            "points": "0 0 32 0 32 32 0 32",
                                          },
                                          "children": Array [],
                                          "name": "polygon",
                                          "namespace": "http://www.w3.org/2000/svg",
                                          "next": [Circular],
                                          "parent": [Circular],
                                          "prev": null,
                                          "type": "tag",
                                          "x-attribsNamespace": Object {
                                            "id": undefined,
                                            "points": undefined,
                                          },
                                          "x-attribsPrefix": Object {
                                            "id": undefined,
                                            "points": undefined,
                                          },
                                        },
                                        "type": "tag",
                                        "x-attribsNamespace": Object {
                                          "d": undefined,
                                          "fill": undefined,
                                          "fill-rule": undefined,
                                          "id": undefined,
                                        },
                                        "x-attribsPrefix": Object {
                                          "d": undefined,
                                          "fill": undefined,
                                          "fill-rule": undefined,
                                          "id": undefined,
                                        },
                                      },
                                    ],
                                    "name": "g",
                                    "namespace": "http://www.w3.org/2000/svg",
                                    "next": null,
                                    "parent": [Circular],
                                    "prev": null,
                                    "type": "tag",
                                    "x-attribsNamespace": Object {
                                      "id": undefined,
                                      "transform": undefined,
                                    },
                                    "x-attribsPrefix": Object {
                                      "id": undefined,
                                      "transform": undefined,
                                    },
                                  },
                                ],
                                "name": "g",
                                "namespace": "http://www.w3.org/2000/svg",
                                "next": null,
                                "parent": [Circular],
                                "prev": null,
                                "type": "tag",
                                "x-attribsNamespace": Object {},
                                "x-attribsPrefix": Object {},
                              },
                            ],
                            "name": "g",
                            "namespace": "http://www.w3.org/2000/svg",
                            "next": null,
                            "parent": [Circular],
                            "prev": null,
                            "type": "tag",
                            "x-attribsNamespace": Object {
                              "id": undefined,
                              "transform": undefined,
                            },
                            "x-attribsPrefix": Object {
                              "id": undefined,
                              "transform": undefined,
                            },
                          },
                        ],
                        "name": "g",
                        "namespace": "http://www.w3.org/2000/svg",
                        "next": null,
                        "parent": [Circular],
                        "prev": [Circular],
                        "type": "tag",
                        "x-attribsNamespace": Object {
                          "fill": undefined,
                          "fill-rule": undefined,
                          "id": undefined,
                          "stroke": undefined,
                          "stroke-width": undefined,
                        },
                        "x-attribsPrefix": Object {
                          "fill": undefined,
                          "fill-rule": undefined,
                          "id": undefined,
                          "stroke": undefined,
                          "stroke-width": undefined,
                        },
                      },
                      "parent": [Circular],
                      "prev": [Circular],
                      "type": "tag",
                      "x-attribsNamespace": Object {},
                      "x-attribsPrefix": Object {},
                    },
                    "parent": [Circular],
                    "prev": null,
                    "type": "tag",
                    "x-attribsNamespace": Object {},
                    "x-attribsPrefix": Object {},
                  },
                  Object {
                    "attribs": Object {},
                    "children": Array [
                      Object {
                        "data": "Created with Sketch.",
                        "next": null,
                        "parent": [Circular],
                        "prev": null,
                        "type": "text",
                      },
                    ],
                    "name": "desc",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": Object {
                      "attribs": Object {
                        "fill": "none",
                        "fill-rule": "evenodd",
                        "id": "Symbols",
                        "stroke": "none",
                        "stroke-width": "1",
                      },
                      "children": Array [
                        Object {
                          "attribs": Object {
                            "id": "Buy-Eth-call-out",
                            "transform": "translate(-40.000000, -20.000000)",
                          },
                          "children": Array [
                            Object {
                              "attribs": Object {},
                              "children": Array [
                                Object {
                                  "attribs": Object {
                                    "id": "baseline-error-24px",
                                    "transform": "translate(38.000000, 18.000000)",
                                  },
                                  "children": Array [
                                    Object {
                                      "attribs": Object {
                                        "id": "Path",
                                        "points": "0 0 32 0 32 32 0 32",
                                      },
                                      "children": Array [],
                                      "name": "polygon",
                                      "namespace": "http://www.w3.org/2000/svg",
                                      "next": Object {
                                        "attribs": Object {
                                          "d": "M16,2.66666667 C8.64,2.66666667 2.66666667,8.64 2.66666667,16 C2.66666667,23.36 8.64,29.3333333 16,29.3333333 C23.36,29.3333333 29.3333333,23.36 29.3333333,16 C29.3333333,8.64 23.36,2.66666667 16,2.66666667 Z M17.3333333,22.6666667 L14.6666667,22.6666667 L14.6666667,20 L17.3333333,20 L17.3333333,22.6666667 Z M17.3333333,17.3333333 L14.6666667,17.3333333 L14.6666667,9.33333333 L17.3333333,9.33333333 L17.3333333,17.3333333 Z",
                                          "fill": "#F2524A",
                                          "fill-rule": "nonzero",
                                          "id": "Shape",
                                        },
                                        "children": Array [],
                                        "name": "path",
                                        "namespace": "http://www.w3.org/2000/svg",
                                        "next": null,
                                        "parent": [Circular],
                                        "prev": [Circular],
                                        "type": "tag",
                                        "x-attribsNamespace": Object {
                                          "d": undefined,
                                          "fill": undefined,
                                          "fill-rule": undefined,
                                          "id": undefined,
                                        },
                                        "x-attribsPrefix": Object {
                                          "d": undefined,
                                          "fill": undefined,
                                          "fill-rule": undefined,
                                          "id": undefined,
                                        },
                                      },
                                      "parent": [Circular],
                                      "prev": null,
                                      "type": "tag",
                                      "x-attribsNamespace": Object {
                                        "id": undefined,
                                        "points": undefined,
                                      },
                                      "x-attribsPrefix": Object {
                                        "id": undefined,
                                        "points": undefined,
                                      },
                                    },
                                    Object {
                                      "attribs": Object {
                                        "d": "M16,2.66666667 C8.64,2.66666667 2.66666667,8.64 2.66666667,16 C2.66666667,23.36 8.64,29.3333333 16,29.3333333 C23.36,29.3333333 29.3333333,23.36 29.3333333,16 C29.3333333,8.64 23.36,2.66666667 16,2.66666667 Z M17.3333333,22.6666667 L14.6666667,22.6666667 L14.6666667,20 L17.3333333,20 L17.3333333,22.6666667 Z M17.3333333,17.3333333 L14.6666667,17.3333333 L14.6666667,9.33333333 L17.3333333,9.33333333 L17.3333333,17.3333333 Z",
                                        "fill": "#F2524A",
                                        "fill-rule": "nonzero",
                                        "id": "Shape",
                                      },
                                      "children": Array [],
                                      "name": "path",
                                      "namespace": "http://www.w3.org/2000/svg",
                                      "next": null,
                                      "parent": [Circular],
                                      "prev": Object {
                                        "attribs": Object {
                                          "id": "Path",
                                          "points": "0 0 32 0 32 32 0 32",
                                        },
                                        "children": Array [],
                                        "name": "polygon",
                                        "namespace": "http://www.w3.org/2000/svg",
                                        "next": [Circular],
                                        "parent": [Circular],
                                        "prev": null,
                                        "type": "tag",
                                        "x-attribsNamespace": Object {
                                          "id": undefined,
                                          "points": undefined,
                                        },
                                        "x-attribsPrefix": Object {
                                          "id": undefined,
                                          "points": undefined,
                                        },
                                      },
                                      "type": "tag",
                                      "x-attribsNamespace": Object {
                                        "d": undefined,
                                        "fill": undefined,
                                        "fill-rule": undefined,
                                        "id": undefined,
                                      },
                                      "x-attribsPrefix": Object {
                                        "d": undefined,
                                        "fill": undefined,
                                        "fill-rule": undefined,
                                        "id": undefined,
                                      },
                                    },
                                  ],
                                  "name": "g",
                                  "namespace": "http://www.w3.org/2000/svg",
                                  "next": null,
                                  "parent": [Circular],
                                  "prev": null,
                                  "type": "tag",
                                  "x-attribsNamespace": Object {
                                    "id": undefined,
                                    "transform": undefined,
                                  },
                                  "x-attribsPrefix": Object {
                                    "id": undefined,
                                    "transform": undefined,
                                  },
                                },
                              ],
                              "name": "g",
                              "namespace": "http://www.w3.org/2000/svg",
                              "next": null,
                              "parent": [Circular],
                              "prev": null,
                              "type": "tag",
                              "x-attribsNamespace": Object {},
                              "x-attribsPrefix": Object {},
                            },
                          ],
                          "name": "g",
                          "namespace": "http://www.w3.org/2000/svg",
                          "next": null,
                          "parent": [Circular],
                          "prev": null,
                          "type": "tag",
                          "x-attribsNamespace": Object {
                            "id": undefined,
                            "transform": undefined,
                          },
                          "x-attribsPrefix": Object {
                            "id": undefined,
                            "transform": undefined,
                          },
                        },
                      ],
                      "name": "g",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": null,
                      "parent": [Circular],
                      "prev": [Circular],
                      "type": "tag",
                      "x-attribsNamespace": Object {
                        "fill": undefined,
                        "fill-rule": undefined,
                        "id": undefined,
                        "stroke": undefined,
                        "stroke-width": undefined,
                      },
                      "x-attribsPrefix": Object {
                        "fill": undefined,
                        "fill-rule": undefined,
                        "id": undefined,
                        "stroke": undefined,
                        "stroke-width": undefined,
                      },
                    },
                    "parent": [Circular],
                    "prev": Object {
                      "attribs": Object {},
                      "children": Array [
                        Object {
                          "data": "ico-info-notification",
                          "next": null,
                          "parent": [Circular],
                          "prev": null,
                          "type": "text",
                        },
                      ],
                      "name": "title",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": [Circular],
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {},
                      "x-attribsPrefix": Object {},
                    },
                    "type": "tag",
                    "x-attribsNamespace": Object {},
                    "x-attribsPrefix": Object {},
                  },
                  Object {
                    "attribs": Object {
                      "fill": "none",
                      "fill-rule": "evenodd",
                      "id": "Symbols",
                      "stroke": "none",
                      "stroke-width": "1",
                    },
                    "children": Array [
                      Object {
                        "attribs": Object {
                          "id": "Buy-Eth-call-out",
                          "transform": "translate(-40.000000, -20.000000)",
                        },
                        "children": Array [
                          Object {
                            "attribs": Object {},
                            "children": Array [
                              Object {
                                "attribs": Object {
                                  "id": "baseline-error-24px",
                                  "transform": "translate(38.000000, 18.000000)",
                                },
                                "children": Array [
                                  Object {
                                    "attribs": Object {
                                      "id": "Path",
                                      "points": "0 0 32 0 32 32 0 32",
                                    },
                                    "children": Array [],
                                    "name": "polygon",
                                    "namespace": "http://www.w3.org/2000/svg",
                                    "next": Object {
                                      "attribs": Object {
                                        "d": "M16,2.66666667 C8.64,2.66666667 2.66666667,8.64 2.66666667,16 C2.66666667,23.36 8.64,29.3333333 16,29.3333333 C23.36,29.3333333 29.3333333,23.36 29.3333333,16 C29.3333333,8.64 23.36,2.66666667 16,2.66666667 Z M17.3333333,22.6666667 L14.6666667,22.6666667 L14.6666667,20 L17.3333333,20 L17.3333333,22.6666667 Z M17.3333333,17.3333333 L14.6666667,17.3333333 L14.6666667,9.33333333 L17.3333333,9.33333333 L17.3333333,17.3333333 Z",
                                        "fill": "#F2524A",
                                        "fill-rule": "nonzero",
                                        "id": "Shape",
                                      },
                                      "children": Array [],
                                      "name": "path",
                                      "namespace": "http://www.w3.org/2000/svg",
                                      "next": null,
                                      "parent": [Circular],
                                      "prev": [Circular],
                                      "type": "tag",
                                      "x-attribsNamespace": Object {
                                        "d": undefined,
                                        "fill": undefined,
                                        "fill-rule": undefined,
                                        "id": undefined,
                                      },
                                      "x-attribsPrefix": Object {
                                        "d": undefined,
                                        "fill": undefined,
                                        "fill-rule": undefined,
                                        "id": undefined,
                                      },
                                    },
                                    "parent": [Circular],
                                    "prev": null,
                                    "type": "tag",
                                    "x-attribsNamespace": Object {
                                      "id": undefined,
                                      "points": undefined,
                                    },
                                    "x-attribsPrefix": Object {
                                      "id": undefined,
                                      "points": undefined,
                                    },
                                  },
                                  Object {
                                    "attribs": Object {
                                      "d": "M16,2.66666667 C8.64,2.66666667 2.66666667,8.64 2.66666667,16 C2.66666667,23.36 8.64,29.3333333 16,29.3333333 C23.36,29.3333333 29.3333333,23.36 29.3333333,16 C29.3333333,8.64 23.36,2.66666667 16,2.66666667 Z M17.3333333,22.6666667 L14.6666667,22.6666667 L14.6666667,20 L17.3333333,20 L17.3333333,22.6666667 Z M17.3333333,17.3333333 L14.6666667,17.3333333 L14.6666667,9.33333333 L17.3333333,9.33333333 L17.3333333,17.3333333 Z",
                                      "fill": "#F2524A",
                                      "fill-rule": "nonzero",
                                      "id": "Shape",
                                    },
                                    "children": Array [],
                                    "name": "path",
                                    "namespace": "http://www.w3.org/2000/svg",
                                    "next": null,
                                    "parent": [Circular],
                                    "prev": Object {
                                      "attribs": Object {
                                        "id": "Path",
                                        "points": "0 0 32 0 32 32 0 32",
                                      },
                                      "children": Array [],
                                      "name": "polygon",
                                      "namespace": "http://www.w3.org/2000/svg",
                                      "next": [Circular],
                                      "parent": [Circular],
                                      "prev": null,
                                      "type": "tag",
                                      "x-attribsNamespace": Object {
                                        "id": undefined,
                                        "points": undefined,
                                      },
                                      "x-attribsPrefix": Object {
                                        "id": undefined,
                                        "points": undefined,
                                      },
                                    },
                                    "type": "tag",
                                    "x-attribsNamespace": Object {
                                      "d": undefined,
                                      "fill": undefined,
                                      "fill-rule": undefined,
                                      "id": undefined,
                                    },
                                    "x-attribsPrefix": Object {
                                      "d": undefined,
                                      "fill": undefined,
                                      "fill-rule": undefined,
                                      "id": undefined,
                                    },
                                  },
                                ],
                                "name": "g",
                                "namespace": "http://www.w3.org/2000/svg",
                                "next": null,
                                "parent": [Circular],
                                "prev": null,
                                "type": "tag",
                                "x-attribsNamespace": Object {
                                  "id": undefined,
                                  "transform": undefined,
                                },
                                "x-attribsPrefix": Object {
                                  "id": undefined,
                                  "transform": undefined,
                                },
                              },
                            ],
                            "name": "g",
                            "namespace": "http://www.w3.org/2000/svg",
                            "next": null,
                            "parent": [Circular],
                            "prev": null,
                            "type": "tag",
                            "x-attribsNamespace": Object {},
                            "x-attribsPrefix": Object {},
                          },
                        ],
                        "name": "g",
                        "namespace": "http://www.w3.org/2000/svg",
                        "next": null,
                        "parent": [Circular],
                        "prev": null,
                        "type": "tag",
                        "x-attribsNamespace": Object {
                          "id": undefined,
                          "transform": undefined,
                        },
                        "x-attribsPrefix": Object {
                          "id": undefined,
                          "transform": undefined,
                        },
                      },
                    ],
                    "name": "g",
                    "namespace": "http://www.w3.org/2000/svg",
                    "next": null,
                    "parent": [Circular],
                    "prev": Object {
                      "attribs": Object {},
                      "children": Array [
                        Object {
                          "data": "Created with Sketch.",
                          "next": null,
                          "parent": [Circular],
                          "prev": null,
                          "type": "text",
                        },
                      ],
                      "name": "desc",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": [Circular],
                      "parent": [Circular],
                      "prev": Object {
                        "attribs": Object {},
                        "children": Array [
                          Object {
                            "data": "ico-info-notification",
                            "next": null,
                            "parent": [Circular],
                            "prev": null,
                            "type": "text",
                          },
                        ],
                        "name": "title",
                        "namespace": "http://www.w3.org/2000/svg",
                        "next": [Circular],
                        "parent": [Circular],
                        "prev": null,
                        "type": "tag",
                        "x-attribsNamespace": Object {},
                        "x-attribsPrefix": Object {},
                      },
                      "type": "tag",
                      "x-attribsNamespace": Object {},
                      "x-attribsPrefix": Object {},
                    },
                    "type": "tag",
                    "x-attribsNamespace": Object {
                      "fill": undefined,
                      "fill-rule": undefined,
                      "id": undefined,
                      "stroke": undefined,
                      "stroke-width": undefined,
                    },
                    "x-attribsPrefix": Object {
                      "fill": undefined,
                      "fill-rule": undefined,
                      "id": undefined,
                      "stroke": undefined,
                      "stroke-width": undefined,
                    },
                  },
                ],
                "name": "svg",
                "namespace": "http://www.w3.org/2000/svg",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "tag",
                "x-attribsNamespace": Object {
                  "height": undefined,
                  "version": undefined,
                  "viewBox": undefined,
                  "width": undefined,
                  "xlink": "http://www.w3.org/2000/xmlns/",
                  "xmlns": "http://www.w3.org/2000/xmlns/",
                },
                "x-attribsPrefix": Object {
                  "height": undefined,
                  "version": undefined,
                  "viewBox": undefined,
                  "width": undefined,
                  "xlink": "xmlns",
                  "xmlns": "",
                },
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": Object {
              "attribs": Object {
                "class": "sc-kbdWBx dtvnZA",
              },
              "children": Array [
                Object {
                  "data": "This is an error notice",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "div",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": [Circular],
              "type": "tag",
              "x-attribsNamespace": Object {
                "class": undefined,
              },
              "x-attribsPrefix": Object {
                "class": undefined,
              },
            },
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
            },
          },
          Object {
            "attribs": Object {
              "class": "sc-kbdWBx dtvnZA",
            },
            "children": Array [
              Object {
                "data": "This is an error notice",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": Object {
              "attribs": Object {
                "class": "sc-eAyhxF bteHJh",
              },
              "children": Array [
                Object {
                  "attribs": Object {
                    "height": "28px",
                    "version": "1.1",
                    "viewBox": "0 0 28 28",
                    "width": "28px",
                    "xlink": "http://www.w3.org/1999/xlink",
                    "xmlns": "http://www.w3.org/2000/svg",
                  },
                  "children": Array [
                    Object {
                      "attribs": Object {},
                      "children": Array [
                        Object {
                          "data": "ico-info-notification",
                          "next": null,
                          "parent": [Circular],
                          "prev": null,
                          "type": "text",
                        },
                      ],
                      "name": "title",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": Object {
                        "attribs": Object {},
                        "children": Array [
                          Object {
                            "data": "Created with Sketch.",
                            "next": null,
                            "parent": [Circular],
                            "prev": null,
                            "type": "text",
                          },
                        ],
                        "name": "desc",
                        "namespace": "http://www.w3.org/2000/svg",
                        "next": Object {
                          "attribs": Object {
                            "fill": "none",
                            "fill-rule": "evenodd",
                            "id": "Symbols",
                            "stroke": "none",
                            "stroke-width": "1",
                          },
                          "children": Array [
                            Object {
                              "attribs": Object {
                                "id": "Buy-Eth-call-out",
                                "transform": "translate(-40.000000, -20.000000)",
                              },
                              "children": Array [
                                Object {
                                  "attribs": Object {},
                                  "children": Array [
                                    Object {
                                      "attribs": Object {
                                        "id": "baseline-error-24px",
                                        "transform": "translate(38.000000, 18.000000)",
                                      },
                                      "children": Array [
                                        Object {
                                          "attribs": Object {
                                            "id": "Path",
                                            "points": "0 0 32 0 32 32 0 32",
                                          },
                                          "children": Array [],
                                          "name": "polygon",
                                          "namespace": "http://www.w3.org/2000/svg",
                                          "next": Object {
                                            "attribs": Object {
                                              "d": "M16,2.66666667 C8.64,2.66666667 2.66666667,8.64 2.66666667,16 C2.66666667,23.36 8.64,29.3333333 16,29.3333333 C23.36,29.3333333 29.3333333,23.36 29.3333333,16 C29.3333333,8.64 23.36,2.66666667 16,2.66666667 Z M17.3333333,22.6666667 L14.6666667,22.6666667 L14.6666667,20 L17.3333333,20 L17.3333333,22.6666667 Z M17.3333333,17.3333333 L14.6666667,17.3333333 L14.6666667,9.33333333 L17.3333333,9.33333333 L17.3333333,17.3333333 Z",
                                              "fill": "#F2524A",
                                              "fill-rule": "nonzero",
                                              "id": "Shape",
                                            },
                                            "children": Array [],
                                            "name": "path",
                                            "namespace": "http://www.w3.org/2000/svg",
                                            "next": null,
                                            "parent": [Circular],
                                            "prev": [Circular],
                                            "type": "tag",
                                            "x-attribsNamespace": Object {
                                              "d": undefined,
                                              "fill": undefined,
                                              "fill-rule": undefined,
                                              "id": undefined,
                                            },
                                            "x-attribsPrefix": Object {
                                              "d": undefined,
                                              "fill": undefined,
                                              "fill-rule": undefined,
                                              "id": undefined,
                                            },
                                          },
                                          "parent": [Circular],
                                          "prev": null,
                                          "type": "tag",
                                          "x-attribsNamespace": Object {
                                            "id": undefined,
                                            "points": undefined,
                                          },
                                          "x-attribsPrefix": Object {
                                            "id": undefined,
                                            "points": undefined,
                                          },
                                        },
                                        Object {
                                          "attribs": Object {
                                            "d": "M16,2.66666667 C8.64,2.66666667 2.66666667,8.64 2.66666667,16 C2.66666667,23.36 8.64,29.3333333 16,29.3333333 C23.36,29.3333333 29.3333333,23.36 29.3333333,16 C29.3333333,8.64 23.36,2.66666667 16,2.66666667 Z M17.3333333,22.6666667 L14.6666667,22.6666667 L14.6666667,20 L17.3333333,20 L17.3333333,22.6666667 Z M17.3333333,17.3333333 L14.6666667,17.3333333 L14.6666667,9.33333333 L17.3333333,9.33333333 L17.3333333,17.3333333 Z",
                                            "fill": "#F2524A",
                                            "fill-rule": "nonzero",
                                            "id": "Shape",
                                          },
                                          "children": Array [],
                                          "name": "path",
                                          "namespace": "http://www.w3.org/2000/svg",
                                          "next": null,
                                          "parent": [Circular],
                                          "prev": Object {
                                            "attribs": Object {
                                              "id": "Path",
                                              "points": "0 0 32 0 32 32 0 32",
                                            },
                                            "children": Array [],
                                            "name": "polygon",
                                            "namespace": "http://www.w3.org/2000/svg",
                                            "next": [Circular],
                                            "parent": [Circular],
                                            "prev": null,
                                            "type": "tag",
                                            "x-attribsNamespace": Object {
                                              "id": undefined,
                                              "points": undefined,
                                            },
                                            "x-attribsPrefix": Object {
                                              "id": undefined,
                                              "points": undefined,
                                            },
                                          },
                                          "type": "tag",
                                          "x-attribsNamespace": Object {
                                            "d": undefined,
                                            "fill": undefined,
                                            "fill-rule": undefined,
                                            "id": undefined,
                                          },
                                          "x-attribsPrefix": Object {
                                            "d": undefined,
                                            "fill": undefined,
                                            "fill-rule": undefined,
                                            "id": undefined,
                                          },
                                        },
                                      ],
                                      "name": "g",
                                      "namespace": "http://www.w3.org/2000/svg",
                                      "next": null,
                                      "parent": [Circular],
                                      "prev": null,
                                      "type": "tag",
                                      "x-attribsNamespace": Object {
                                        "id": undefined,
                                        "transform": undefined,
                                      },
                                      "x-attribsPrefix": Object {
                                        "id": undefined,
                                        "transform": undefined,
                                      },
                                    },
                                  ],
                                  "name": "g",
                                  "namespace": "http://www.w3.org/2000/svg",
                                  "next": null,
                                  "parent": [Circular],
                                  "prev": null,
                                  "type": "tag",
                                  "x-attribsNamespace": Object {},
                                  "x-attribsPrefix": Object {},
                                },
                              ],
                              "name": "g",
                              "namespace": "http://www.w3.org/2000/svg",
                              "next": null,
                              "parent": [Circular],
                              "prev": null,
                              "type": "tag",
                              "x-attribsNamespace": Object {
                                "id": undefined,
                                "transform": undefined,
                              },
                              "x-attribsPrefix": Object {
                                "id": undefined,
                                "transform": undefined,
                              },
                            },
                          ],
                          "name": "g",
                          "namespace": "http://www.w3.org/2000/svg",
                          "next": null,
                          "parent": [Circular],
                          "prev": [Circular],
                          "type": "tag",
                          "x-attribsNamespace": Object {
                            "fill": undefined,
                            "fill-rule": undefined,
                            "id": undefined,
                            "stroke": undefined,
                            "stroke-width": undefined,
                          },
                          "x-attribsPrefix": Object {
                            "fill": undefined,
                            "fill-rule": undefined,
                            "id": undefined,
                            "stroke": undefined,
                            "stroke-width": undefined,
                          },
                        },
                        "parent": [Circular],
                        "prev": [Circular],
                        "type": "tag",
                        "x-attribsNamespace": Object {},
                        "x-attribsPrefix": Object {},
                      },
                      "parent": [Circular],
                      "prev": null,
                      "type": "tag",
                      "x-attribsNamespace": Object {},
                      "x-attribsPrefix": Object {},
                    },
                    Object {
                      "attribs": Object {},
                      "children": Array [
                        Object {
                          "data": "Created with Sketch.",
                          "next": null,
                          "parent": [Circular],
                          "prev": null,
                          "type": "text",
                        },
                      ],
                      "name": "desc",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": Object {
                        "attribs": Object {
                          "fill": "none",
                          "fill-rule": "evenodd",
                          "id": "Symbols",
                          "stroke": "none",
                          "stroke-width": "1",
                        },
                        "children": Array [
                          Object {
                            "attribs": Object {
                              "id": "Buy-Eth-call-out",
                              "transform": "translate(-40.000000, -20.000000)",
                            },
                            "children": Array [
                              Object {
                                "attribs": Object {},
                                "children": Array [
                                  Object {
                                    "attribs": Object {
                                      "id": "baseline-error-24px",
                                      "transform": "translate(38.000000, 18.000000)",
                                    },
                                    "children": Array [
                                      Object {
                                        "attribs": Object {
                                          "id": "Path",
                                          "points": "0 0 32 0 32 32 0 32",
                                        },
                                        "children": Array [],
                                        "name": "polygon",
                                        "namespace": "http://www.w3.org/2000/svg",
                                        "next": Object {
                                          "attribs": Object {
                                            "d": "M16,2.66666667 C8.64,2.66666667 2.66666667,8.64 2.66666667,16 C2.66666667,23.36 8.64,29.3333333 16,29.3333333 C23.36,29.3333333 29.3333333,23.36 29.3333333,16 C29.3333333,8.64 23.36,2.66666667 16,2.66666667 Z M17.3333333,22.6666667 L14.6666667,22.6666667 L14.6666667,20 L17.3333333,20 L17.3333333,22.6666667 Z M17.3333333,17.3333333 L14.6666667,17.3333333 L14.6666667,9.33333333 L17.3333333,9.33333333 L17.3333333,17.3333333 Z",
                                            "fill": "#F2524A",
                                            "fill-rule": "nonzero",
                                            "id": "Shape",
                                          },
                                          "children": Array [],
                                          "name": "path",
                                          "namespace": "http://www.w3.org/2000/svg",
                                          "next": null,
                                          "parent": [Circular],
                                          "prev": [Circular],
                                          "type": "tag",
                                          "x-attribsNamespace": Object {
                                            "d": undefined,
                                            "fill": undefined,
                                            "fill-rule": undefined,
                                            "id": undefined,
                                          },
                                          "x-attribsPrefix": Object {
                                            "d": undefined,
                                            "fill": undefined,
                                            "fill-rule": undefined,
                                            "id": undefined,
                                          },
                                        },
                                        "parent": [Circular],
                                        "prev": null,
                                        "type": "tag",
                                        "x-attribsNamespace": Object {
                                          "id": undefined,
                                          "points": undefined,
                                        },
                                        "x-attribsPrefix": Object {
                                          "id": undefined,
                                          "points": undefined,
                                        },
                                      },
                                      Object {
                                        "attribs": Object {
                                          "d": "M16,2.66666667 C8.64,2.66666667 2.66666667,8.64 2.66666667,16 C2.66666667,23.36 8.64,29.3333333 16,29.3333333 C23.36,29.3333333 29.3333333,23.36 29.3333333,16 C29.3333333,8.64 23.36,2.66666667 16,2.66666667 Z M17.3333333,22.6666667 L14.6666667,22.6666667 L14.6666667,20 L17.3333333,20 L17.3333333,22.6666667 Z M17.3333333,17.3333333 L14.6666667,17.3333333 L14.6666667,9.33333333 L17.3333333,9.33333333 L17.3333333,17.3333333 Z",
                                          "fill": "#F2524A",
                                          "fill-rule": "nonzero",
                                          "id": "Shape",
                                        },
                                        "children": Array [],
                                        "name": "path",
                                        "namespace": "http://www.w3.org/2000/svg",
                                        "next": null,
                                        "parent": [Circular],
                                        "prev": Object {
                                          "attribs": Object {
                                            "id": "Path",
                                            "points": "0 0 32 0 32 32 0 32",
                                          },
                                          "children": Array [],
                                          "name": "polygon",
                                          "namespace": "http://www.w3.org/2000/svg",
                                          "next": [Circular],
                                          "parent": [Circular],
                                          "prev": null,
                                          "type": "tag",
                                          "x-attribsNamespace": Object {
                                            "id": undefined,
                                            "points": undefined,
                                          },
                                          "x-attribsPrefix": Object {
                                            "id": undefined,
                                            "points": undefined,
                                          },
                                        },
                                        "type": "tag",
                                        "x-attribsNamespace": Object {
                                          "d": undefined,
                                          "fill": undefined,
                                          "fill-rule": undefined,
                                          "id": undefined,
                                        },
                                        "x-attribsPrefix": Object {
                                          "d": undefined,
                                          "fill": undefined,
                                          "fill-rule": undefined,
                                          "id": undefined,
                                        },
                                      },
                                    ],
                                    "name": "g",
                                    "namespace": "http://www.w3.org/2000/svg",
                                    "next": null,
                                    "parent": [Circular],
                                    "prev": null,
                                    "type": "tag",
                                    "x-attribsNamespace": Object {
                                      "id": undefined,
                                      "transform": undefined,
                                    },
                                    "x-attribsPrefix": Object {
                                      "id": undefined,
                                      "transform": undefined,
                                    },
                                  },
                                ],
                                "name": "g",
                                "namespace": "http://www.w3.org/2000/svg",
                                "next": null,
                                "parent": [Circular],
                                "prev": null,
                                "type": "tag",
                                "x-attribsNamespace": Object {},
                                "x-attribsPrefix": Object {},
                              },
                            ],
                            "name": "g",
                            "namespace": "http://www.w3.org/2000/svg",
                            "next": null,
                            "parent": [Circular],
                            "prev": null,
                            "type": "tag",
                            "x-attribsNamespace": Object {
                              "id": undefined,
                              "transform": undefined,
                            },
                            "x-attribsPrefix": Object {
                              "id": undefined,
                              "transform": undefined,
                            },
                          },
                        ],
                        "name": "g",
                        "namespace": "http://www.w3.org/2000/svg",
                        "next": null,
                        "parent": [Circular],
                        "prev": [Circular],
                        "type": "tag",
                        "x-attribsNamespace": Object {
                          "fill": undefined,
                          "fill-rule": undefined,
                          "id": undefined,
                          "stroke": undefined,
                          "stroke-width": undefined,
                        },
                        "x-attribsPrefix": Object {
                          "fill": undefined,
                          "fill-rule": undefined,
                          "id": undefined,
                          "stroke": undefined,
                          "stroke-width": undefined,
                        },
                      },
                      "parent": [Circular],
                      "prev": Object {
                        "attribs": Object {},
                        "children": Array [
                          Object {
                            "data": "ico-info-notification",
                            "next": null,
                            "parent": [Circular],
                            "prev": null,
                            "type": "text",
                          },
                        ],
                        "name": "title",
                        "namespace": "http://www.w3.org/2000/svg",
                        "next": [Circular],
                        "parent": [Circular],
                        "prev": null,
                        "type": "tag",
                        "x-attribsNamespace": Object {},
                        "x-attribsPrefix": Object {},
                      },
                      "type": "tag",
                      "x-attribsNamespace": Object {},
                      "x-attribsPrefix": Object {},
                    },
                    Object {
                      "attribs": Object {
                        "fill": "none",
                        "fill-rule": "evenodd",
                        "id": "Symbols",
                        "stroke": "none",
                        "stroke-width": "1",
                      },
                      "children": Array [
                        Object {
                          "attribs": Object {
                            "id": "Buy-Eth-call-out",
                            "transform": "translate(-40.000000, -20.000000)",
                          },
                          "children": Array [
                            Object {
                              "attribs": Object {},
                              "children": Array [
                                Object {
                                  "attribs": Object {
                                    "id": "baseline-error-24px",
                                    "transform": "translate(38.000000, 18.000000)",
                                  },
                                  "children": Array [
                                    Object {
                                      "attribs": Object {
                                        "id": "Path",
                                        "points": "0 0 32 0 32 32 0 32",
                                      },
                                      "children": Array [],
                                      "name": "polygon",
                                      "namespace": "http://www.w3.org/2000/svg",
                                      "next": Object {
                                        "attribs": Object {
                                          "d": "M16,2.66666667 C8.64,2.66666667 2.66666667,8.64 2.66666667,16 C2.66666667,23.36 8.64,29.3333333 16,29.3333333 C23.36,29.3333333 29.3333333,23.36 29.3333333,16 C29.3333333,8.64 23.36,2.66666667 16,2.66666667 Z M17.3333333,22.6666667 L14.6666667,22.6666667 L14.6666667,20 L17.3333333,20 L17.3333333,22.6666667 Z M17.3333333,17.3333333 L14.6666667,17.3333333 L14.6666667,9.33333333 L17.3333333,9.33333333 L17.3333333,17.3333333 Z",
                                          "fill": "#F2524A",
                                          "fill-rule": "nonzero",
                                          "id": "Shape",
                                        },
                                        "children": Array [],
                                        "name": "path",
                                        "namespace": "http://www.w3.org/2000/svg",
                                        "next": null,
                                        "parent": [Circular],
                                        "prev": [Circular],
                                        "type": "tag",
                                        "x-attribsNamespace": Object {
                                          "d": undefined,
                                          "fill": undefined,
                                          "fill-rule": undefined,
                                          "id": undefined,
                                        },
                                        "x-attribsPrefix": Object {
                                          "d": undefined,
                                          "fill": undefined,
                                          "fill-rule": undefined,
                                          "id": undefined,
                                        },
                                      },
                                      "parent": [Circular],
                                      "prev": null,
                                      "type": "tag",
                                      "x-attribsNamespace": Object {
                                        "id": undefined,
                                        "points": undefined,
                                      },
                                      "x-attribsPrefix": Object {
                                        "id": undefined,
                                        "points": undefined,
                                      },
                                    },
                                    Object {
                                      "attribs": Object {
                                        "d": "M16,2.66666667 C8.64,2.66666667 2.66666667,8.64 2.66666667,16 C2.66666667,23.36 8.64,29.3333333 16,29.3333333 C23.36,29.3333333 29.3333333,23.36 29.3333333,16 C29.3333333,8.64 23.36,2.66666667 16,2.66666667 Z M17.3333333,22.6666667 L14.6666667,22.6666667 L14.6666667,20 L17.3333333,20 L17.3333333,22.6666667 Z M17.3333333,17.3333333 L14.6666667,17.3333333 L14.6666667,9.33333333 L17.3333333,9.33333333 L17.3333333,17.3333333 Z",
                                        "fill": "#F2524A",
                                        "fill-rule": "nonzero",
                                        "id": "Shape",
                                      },
                                      "children": Array [],
                                      "name": "path",
                                      "namespace": "http://www.w3.org/2000/svg",
                                      "next": null,
                                      "parent": [Circular],
                                      "prev": Object {
                                        "attribs": Object {
                                          "id": "Path",
                                          "points": "0 0 32 0 32 32 0 32",
                                        },
                                        "children": Array [],
                                        "name": "polygon",
                                        "namespace": "http://www.w3.org/2000/svg",
                                        "next": [Circular],
                                        "parent": [Circular],
                                        "prev": null,
                                        "type": "tag",
                                        "x-attribsNamespace": Object {
                                          "id": undefined,
                                          "points": undefined,
                                        },
                                        "x-attribsPrefix": Object {
                                          "id": undefined,
                                          "points": undefined,
                                        },
                                      },
                                      "type": "tag",
                                      "x-attribsNamespace": Object {
                                        "d": undefined,
                                        "fill": undefined,
                                        "fill-rule": undefined,
                                        "id": undefined,
                                      },
                                      "x-attribsPrefix": Object {
                                        "d": undefined,
                                        "fill": undefined,
                                        "fill-rule": undefined,
                                        "id": undefined,
                                      },
                                    },
                                  ],
                                  "name": "g",
                                  "namespace": "http://www.w3.org/2000/svg",
                                  "next": null,
                                  "parent": [Circular],
                                  "prev": null,
                                  "type": "tag",
                                  "x-attribsNamespace": Object {
                                    "id": undefined,
                                    "transform": undefined,
                                  },
                                  "x-attribsPrefix": Object {
                                    "id": undefined,
                                    "transform": undefined,
                                  },
                                },
                              ],
                              "name": "g",
                              "namespace": "http://www.w3.org/2000/svg",
                              "next": null,
                              "parent": [Circular],
                              "prev": null,
                              "type": "tag",
                              "x-attribsNamespace": Object {},
                              "x-attribsPrefix": Object {},
                            },
                          ],
                          "name": "g",
                          "namespace": "http://www.w3.org/2000/svg",
                          "next": null,
                          "parent": [Circular],
                          "prev": null,
                          "type": "tag",
                          "x-attribsNamespace": Object {
                            "id": undefined,
                            "transform": undefined,
                          },
                          "x-attribsPrefix": Object {
                            "id": undefined,
                            "transform": undefined,
                          },
                        },
                      ],
                      "name": "g",
                      "namespace": "http://www.w3.org/2000/svg",
                      "next": null,
                      "parent": [Circular],
                      "prev": Object {
                        "attribs": Object {},
                        "children": Array [
                          Object {
                            "data": "Created with Sketch.",
                            "next": null,
                            "parent": [Circular],
                            "prev": null,
                            "type": "text",
                          },
                        ],
                        "name": "desc",
                        "namespace": "http://www.w3.org/2000/svg",
                        "next": [Circular],
                        "parent": [Circular],
                        "prev": Object {
                          "attribs": Object {},
                          "children": Array [
                            Object {
                              "data": "ico-info-notification",
                              "next": null,
                              "parent": [Circular],
                              "prev": null,
                              "type": "text",
                            },
                          ],
                          "name": "title",
                          "namespace": "http://www.w3.org/2000/svg",
                          "next": [Circular],
                          "parent": [Circular],
                          "prev": null,
                          "type": "tag",
                          "x-attribsNamespace": Object {},
                          "x-attribsPrefix": Object {},
                        },
                        "type": "tag",
                        "x-attribsNamespace": Object {},
                        "x-attribsPrefix": Object {},
                      },
                      "type": "tag",
                      "x-attribsNamespace": Object {
                        "fill": undefined,
                        "fill-rule": undefined,
                        "id": undefined,
                        "stroke": undefined,
                        "stroke-width": undefined,
                      },
                      "x-attribsPrefix": Object {
                        "fill": undefined,
                        "fill-rule": undefined,
                        "id": undefined,
                        "stroke": undefined,
                        "stroke-width": undefined,
                      },
                    },
                  ],
                  "name": "svg",
                  "namespace": "http://www.w3.org/2000/svg",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "tag",
                  "x-attribsNamespace": Object {
                    "height": undefined,
                    "version": undefined,
                    "viewBox": undefined,
                    "width": undefined,
                    "xlink": "http://www.w3.org/2000/xmlns/",
                    "xmlns": "http://www.w3.org/2000/xmlns/",
                  },
                  "x-attribsPrefix": Object {
                    "height": undefined,
                    "version": undefined,
                    "viewBox": undefined,
                    "width": undefined,
                    "xlink": "xmlns",
                    "xmlns": "",
                  },
                },
              ],
              "name": "div",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": [Circular],
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {
                "class": undefined,
              },
              "x-attribsPrefix": Object {
                "class": undefined,
              },
            },
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
            },
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "type": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "type": undefined,
        },
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`Storyshots Notice Info 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "sc-fdqjUm qwomD",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "sc-cLmFfZ tKpHg",
          "type": "0",
        },
        "children": Array [
          Object {
            "attribs": Object {
              "class": "sc-eAyhxF bteHJh",
            },
            "children": Array [],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": Object {
              "attribs": Object {
                "class": "sc-kbdWBx dtvnZA",
              },
              "children": Array [
                Object {
                  "data": "This is an info notice",
                  "next": null,
                  "parent": [Circular],
                  "prev": null,
                  "type": "text",
                },
              ],
              "name": "div",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": null,
              "parent": [Circular],
              "prev": [Circular],
              "type": "tag",
              "x-attribsNamespace": Object {
                "class": undefined,
              },
              "x-attribsPrefix": Object {
                "class": undefined,
              },
            },
            "parent": [Circular],
            "prev": null,
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
            },
          },
          Object {
            "attribs": Object {
              "class": "sc-kbdWBx dtvnZA",
            },
            "children": Array [
              Object {
                "data": "This is an info notice",
                "next": null,
                "parent": [Circular],
                "prev": null,
                "type": "text",
              },
            ],
            "name": "div",
            "namespace": "http://www.w3.org/1999/xhtml",
            "next": null,
            "parent": [Circular],
            "prev": Object {
              "attribs": Object {
                "class": "sc-eAyhxF bteHJh",
              },
              "children": Array [],
              "name": "div",
              "namespace": "http://www.w3.org/1999/xhtml",
              "next": [Circular],
              "parent": [Circular],
              "prev": null,
              "type": "tag",
              "x-attribsNamespace": Object {
                "class": undefined,
              },
              "x-attribsPrefix": Object {
                "class": undefined,
              },
            },
            "type": "tag",
            "x-attribsNamespace": Object {
              "class": undefined,
            },
            "x-attribsPrefix": Object {
              "class": undefined,
            },
          },
        ],
        "name": "div",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "type": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "type": undefined,
        },
      },
    ],
    "name": "div",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;
